# StringFix

./: CMakeLists.txt  README.md  StringFix.cpp  StringFix.h  Test.cmake  Version.cmake
src/: StringFix.cpp
test/: StringFixTests.cpp  StringFixTests.hpp
